<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Scott\'sToDoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title">Title</string>
    <string name="title_">Title:</string>
    <string name="add_title_here">Add title here</string>
    <string name="date_">Date:</string>
    <string name="m_d_yyyy">mm/dd/yyyy</string>
    <string name="notes_">Notes:</string>
    <string name="add">Add</string>
    <string name="action_add">Add</string>
    <string name="email_items">Email Items</string>
    <string name="title_activity_add_to_do_item">AddToDoItemActivity</string>
    <string name="you_currently_have_no_to_do_items_">You currently have no to do items.</string>
    <string name="_quot_quot_"></string>

</resources>
